# attune-firmware

./: .dockerignore  .gitignore  Dockerfile  README.md
.github/workflows/: build-firmware.yml
omi/firmware/devkit/: CMakeLists.txt  CMakePresets.json  Kconfig  prj_xiao_ble_sense_devkitv2-adafruit.conf
omi/firmware/devkit/src/: codec.c  config.h  mic.c  mic.h  transport.h  usb.c
omi/firmware/devkit/src/lib/battery/: battery.c  battery.h
omi/firmware/omi/: omi.conf
omi/firmware/omi/src/: wifi.c
omi/firmware/omi/src/lib/core/: features.h
omi/firmware/test/: omi.conf
omi/firmware/xiao_minimal/: CMakeLists.txt  Kconfig  prj.conf  xiao_ble_sense.overlay
omi/firmware/xiao_minimal/src/: main.c  stubs.c  transport.c
scripts/: build_xiao_minimal.sh  setup_ncs_zephyr.sh
